changed var names, used diff modes for eraser/pen

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
             <div class='panel show' id='spacingColor'>
                 <div class='colorRightMargin colorContainer'>
                     <div class="colorContainer">
-                        <div class='hoverColorButton'></div>
+                        <div class='colorSquareBackground'></div>
                         <div id='blueButton' class='buttonColor'></div>
-                        <div class='hoverColorButton'></div>
+                        <div class='colorSquareBackground'></div>
                         <div id='redButton' class='buttonColor'></div>
-                        <div class='hoverColorButton'></div>
+                        <div class='colorSquareBackground'></div>
                         <div id='orangeButton' class='buttonColor'></div>
                     </div>
                 </div>
 
                 <div class='colorRightMargin'>
                     <div id="colorContainer">
-                        <div class='hoverColorButton'></div>
+                        <div class='colorSquareBackground'></div>
                         <div id='purpleButton' class='buttonColor'></div>
-                        <div class='hoverColorButton'></div>
+                        <div class='colorSquareBackground'></div>
                         <div id='yellowButton' class='buttonColor'></div>
-                        <div class='hoverColorButton'></div>
+                        <div class='colorSquareBackground'></div>
                         <div id='blackButton' class='buttonColor'></div>
                     </div>
                 </div>
@@ -41,14 +41,14 @@
             <div class='panel show'>
                 <div id='thicknessSpacing'>
                     <div id="thicknessContainer">
-                        <div id="hoverThickness5Button"></div>
-                        <div id='thickness5' class='buttonThickness'></div>
-                        <div id="hoverThickness10Button"></div>
-                        <div id='thickness10' class='buttonThickness'></div>
-                        <div id="hoverThickness25Button"></div>
-                        <div id='thickness25' class='buttonThickness'></div>
-                        <div id="hoverThickness50Button"></div>
-                        <div id='thickness50' class='buttonThickness'></div>
+                        <div id="smallThicknessSquareBackground"></div>
+                        <div id='smallThickness' class='buttonThickness'></div>
+                        <div id="mediumThicknessSquareBackground"></div>
+                        <div id='mediumThickness' class='buttonThickness'></div>
+                        <div id="largeThicknessSquareBackground"></div>
+                        <div id='largeThickness' class='buttonThickness'></div>
+                        <div id='xLargeThicknessSquareBackground'></div>
+                        <div id='xLargeThickness' class='buttonThickness'></div>
                     </div>
                 </div>
 
