Changed repeated actions with functions and paintbrush to an ID

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id ='colorThicknessContainer'>
         <span id='accordionContainer'>
-            <button class='accordion'><i class='fa fa-paint-brush fa-2x' aria-hidden='true'></i></button>
+            <button class='accordion'><i id='paintbrushIcon' class='fa fa-paint-brush fa-2x' aria-hidden='true'></i></button>
             <div class='panel show' id='spacingColor'>
                 <div class='colorRightMargin colorContainer'>
                     <div class="colorContainer">
